src/model/snapshots/axum_graphql__model__tests__snapshot_graqphql_query_async@hello.json.snap
---
source: src/model/tests.rs
expression: body_json
input_file: src/model/snapshot_inputs/hello.json
snapshot_kind: text
---
{
  "data": {
    "hello": "Hello everybody!"
  },
  "extensions": {
    "traceId": "[traceId]"
  }
}
