src/model/snapshots/axum_graphql__model__tests__snapshot_hello_query.snap
---
source: src/model/tests.rs
expression: body
snapshot_kind: text
---
b"{\"data\":{\"hello\":\"Hello everybody!\"},\"extensions\":{\"traceId\":\"00000000000000000000000000000000\"}}"
